--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "az-digital/az-icons",
-    "description": "Supplementary Icon Set for the University of Arizonap.",
+    "description": "Supplementary Icon Set for the University of Arizona.",
     "homepage": "https://github.com/az-digital/az-icons",
     "authors": [
         {
