--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
             rsync --recursive --delete "${AZ_ICONS_CLONE_DIR}/dist/${w}" .
             git add "${w}"
           done
-          git commit -m "Arizona Icon updates for ${{ github.event.client_payload.version }}"
+          git commit --allow-empty -m "Arizona Icon updates for ${{ github.event.client_payload.version }}"
           git push
       - name: Create Release
         id: create_release
